tests/negative/scope/import-fake-package/test.smol
package testing;

import nosuchpackage;

class Main {

}